# soullink_tracker

./: .gitignore  .pre-commit-config.yaml  ADMIN_SETUP.md  CLAUDE.md  LICENSE  PLAYER_SETUP.md  PLAYTEST_GUIDE.md  PORTABLE_IMPLEMENTATION_PLAN.md  PORTABLE_README.md  PRD_PORTABLE.md  PROJECT_STATUS.md  README.md  SETUP_GUIDE.md  SoulLink_HGSS_Tracker_PRD.md  WINDOWS_SETUP.md  WINDOWS_SETUP_GUIDE.md  alembic.ini  build_dual.py  build_simple.py  debug_database_state.py  debug_watcher_issue.py  diagnose_pipeline.py  distribute_players.bat  family-blocking-bug-investigation.md  generate_lua_config.py  load_test_data.py  playwright.config.py  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  run_admin_setup.bat  run_player_setup.bat  setup_player.bat  setup_player.sh  simple_watcher.py  soullink_portable.py  soullink_tracker.db-shm  soullink_tracker.db-wal  soullink_user_portable.py  (+17 more)
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: setup-failure.md  windows-compatibility.md
.github/workflows/: portable-release.yml  trigger-build.yml
alembic/: env.py
alembic/versions/: 0094210dc7ad_add_race_safety_constraints_for_fe_and_.py  85c1bb586534_add_idempotency_key_unique_constraint.py  b4ff90703237_add_password_auth_and_player_sessions.py  fc70a33205b2_add_v3_event_store_and_projection_tables.py
client/lua/: CONFIGURATION.md  README.md  config.lua.example  config_auto.lua  config_template.lua  create_output_dir.lua  memory_addresses.lua  pokemon_tracker.lua  pokemon_tracker_auto.lua  pokemon_tracker_debug.lua  pokemon_tracker_v3.lua  pokemon_tracker_v3_fixed.lua  simple_battle_detector.lua  test_config_nil.lua  test_desmume.lua  test_memory_addresses.lua
client/watcher/: event_watcher.py  player_config.py  requirements.txt
data/: config.json  routes.csv  species.csv
docs/: TROUBLESHOOTING_GUIDE.md  WINDOWS_TROUBLESHOOTING.md
scripts/: admin_setup.py  check_unicode.py  health_check.py  init_database.py  player_setup.py  quick_test.py  start_playtest.py  test_windows_compatibility.py  view_logs.py
src/soullink_tracker/: __init__.py  config.py  launcher.py  main.py  portable_logger.py  user_launcher.py
src/soullink_tracker/api/: admin.py  auth.py  data.py  events.py  middleware.py  players.py  runs.py  schemas.py  websockets.py
src/soullink_tracker/auth/: dependencies.py  jwt_auth.py  rate_limiter.py  security.py
test_events/: encounter_001.json
tests/: conftest.py  test_windows_paths.py
tests/e2e/: conftest.py  test_basic_flow.py  test_complete_pipeline.py  test_comprehensive_pipeline.py
tests/fixtures/: event_fixtures.py  security_fixtures.py
tests/helpers/: concurrency.py
tests/integration/: test_event_store_concurrency.py  test_event_store_persistence.py  test_projection_engine.py  test_projection_graceful_errors.py  test_projection_rebuild_races.py  test_projection_retryability_enhanced.py  test_race_conditions.py  test_race_conditions_enhanced.py  test_websocket_integration.py  test_websocket_session_auth.py
tests/unit/: test_admin_dashboard.py  test_api_data.py  test_api_events.py  test_api_events_v3.py  test_api_events_v3_only.py  test_api_players.py  test_api_runs.py  test_auth.py  test_auth_endpoints.py  test_circuit_breaker.py  test_config_dualwrite.py  test_config_v3_only.py  test_cors_security.py  test_database_sqlite_wal.py  test_event_validation_comprehensive.py  test_family_blocking_bug.py  test_input_validation_security.py  test_main.py  test_middleware.py  test_models.py  test_race_conditions.py  test_retry_logic.py  test_rules_engine.py  test_schema_compatibility.py  test_secure_auth.py  test_secure_token_api.py  test_security_functions.py  test_security_headers.py  test_websocket_broadcast_fix.py  test_websocket_security.py  test_websockets.py
tools/: simulate_events.py  ws_tail.py
tools/fixtures/: __init__.py
web/: admin.html  index.html  player.html
web/css/: styles.css
web/js/: admin-panel.js  admin.js  dashboard.js  player-setup.js  utils.js  websocket.js
(+28 files in other folders)
